--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseURL":"Integrated Security=SSPI;Initial Catalog=RemixCoffeePartners;Data Source=WIN-ID50HMUEVNA;TrustServerCertificate=true;"
+    "DatabaseURL":"Integrated Security=SSPI;Initial Catalog=RemixCoffeePartners;Data Source=WIN-G5N5518AL1O;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
