--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.1",
+    "dotenv": "^16.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^1.2.0"
+    "react-super-responsive-table": "github:EFFM00/react-super-responsive-table",
+    "sort-by": "^1.2.0",
+    "universal-cookie": "^7.1.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
